@@ -151,6 +151,51 @@ public class XYSeriesTests extends TestCase {
     }
 
     /**
+     * Another test of the clone() method.
+     */
+    public void testCloning2() {
+        XYSeries s1 = new XYSeries("S1");
+        s1.add(1.0, 100.0);
+        s1.add(2.0, null);
+        s1.add(3.0, 200.0);
+        XYSeries s2 = null;
+        try {
+            s2 = (XYSeries) s1.clone();
+        }
+        catch (CloneNotSupportedException e) {
+            e.printStackTrace();
+        }
+        assertTrue(s1.equals(s2));
+        
+        // check independence
+        s2.add(4.0, 300.0);
+        assertFalse(s1.equals(s2));
+        s1.add(4.0, 300.0);
+        assertTrue(s1.equals(s2));
+    }
+
+    /**
+     * Another test of the clone() method.
+     */
+    public void testCloning3() {
+        XYSeries s1 = new XYSeries("S1");
+        XYSeries s2 = null;
+        try {
+            s2 = (XYSeries) s1.clone();
+        }
+        catch (CloneNotSupportedException e) {
+            e.printStackTrace();
+        }
+        assertTrue(s1.equals(s2));
+        
+        // check independence
+        s2.add(4.0, 300.0);
+        assertFalse(s1.equals(s2));
+        s1.add(4.0, 300.0);
+        assertTrue(s1.equals(s2));
+    }
+
+    /**
      * Serialize an instance, restore it, and check for equality.
      */
     public void testSerialization() {
